--- a/DataPlotter/DataPlotter.vcxproj.filters
+++ b/DataPlotter/DataPlotter.vcxproj.filters
@@ -13,329 +13,29 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Header Files\application">
-      <UniqueIdentifier>{8423ccae-66d0-447b-b6a2-c3542bd96fd0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\application">
-      <UniqueIdentifier>{02b3349d-68d7-4b1f-82ac-59c518458cf5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\renderer">
-      <UniqueIdentifier>{30484aef-30da-45cd-97c9-f8841ba3789c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\renderer\primitives">
-      <UniqueIdentifier>{8b37301a-d18b-4055-a9dc-383f509f8962}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\renderer">
-      <UniqueIdentifier>{9c7e3aaa-40f3-412d-ab1a-943c7ed360d0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\renderer\primitives">
-      <UniqueIdentifier>{3d2a68c3-6565-4a36-a7b7-81d79f67588a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\utilities">
-      <UniqueIdentifier>{fdc99ff9-4f1b-4920-949f-8c4c8cf053ef}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\utilities">
-      <UniqueIdentifier>{c77b9fea-4d41-4d7d-931c-ef06ce66cd5a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\utilities\math">
-      <UniqueIdentifier>{8d3661e1-b4c3-4430-80b9-df8a59be9ac0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\utilities\signals">
-      <UniqueIdentifier>{a05bc548-68e3-4043-b7a0-424dcc3b4018}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\utilities\math">
-      <UniqueIdentifier>{99c1704b-81c9-404b-b967-ff64780835d3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\utilities\signals">
-      <UniqueIdentifier>{61ee11d1-4439-45b7-bd60-5002528e8066}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\application\dataFiles">
-      <UniqueIdentifier>{230ae823-c77d-4b86-9334-0cc3b3f520dc}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\application\dataFiles">
-      <UniqueIdentifier>{5484ca7e-7212-4b63-9d52-0b77d07eb94d}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="../src\renderer\primitives\axis.h">
-      <Filter>Header Files\renderer\primitives</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\renderer\primitives\primitive.h">
-      <Filter>Header Files\renderer\primitives</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\signals\rms.h">
-      <Filter>Header Files\utilities\signals</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\signals\derivative.h">
-      <Filter>Header Files\utilities\signals</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\signals\fft.h">
-      <Filter>Header Files\utilities\signals</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\signals\integral.h">
-      <Filter>Header Files\utilities\signals</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\dataset2D.h">
-      <Filter>Header Files\utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\rangeLimitsDialog.h">
-      <Filter>Header Files\application</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\dropTarget.h">
-      <Filter>Header Files\application</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\mainFrame.h">
-      <Filter>Header Files\application</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\plotObject.h">
-      <Filter>Header Files\application</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\plotterApp.h">
-      <Filter>Header Files\application</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\renderer\renderWindow.h">
-      <Filter>Header Files\renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\renderer\color.h">
-      <Filter>Header Files\renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\renderer\plotRenderer.h">
-      <Filter>Header Files\renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\renderer\primitives\zoomBox.h">
-      <Filter>Header Files\renderer\primitives</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\renderer\primitives\plotCursor.h">
-      <Filter>Header Files\renderer\primitives</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\renderer\primitives\plotCurve.h">
-      <Filter>Header Files\renderer\primitives</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\managedList.h">
-      <Filter>Header Files\utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\math\vector.h">
-      <Filter>Header Files\utilities\math</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\math\complex.h">
-      <Filter>Header Files\utilities\math</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\math\expressionTree.h">
-      <Filter>Header Files\utilities\math</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\math\matrix.h">
-      <Filter>Header Files\utilities\math</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\math\plotMath.h">
-      <Filter>Header Files\utilities\math</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\signals\curveFit.h">
-      <Filter>Header Files\utilities\signals</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\fontFinder.h">
-      <Filter>Header Files\utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\machineDefinitions.h">
-      <Filter>Header Files\utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\filterDialog.h">
-      <Filter>Header Files\application</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\multiChoiceDialog.h">
-      <Filter>Header Files\application</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\fftDialog.h">
-      <Filter>Header Files\application</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\frfDialog.h">
-      <Filter>Header Files\application</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\dataFiles\dataFile.h">
-      <Filter>Header Files\application\dataFiles</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\dataFiles\customFileFormat.h">
-      <Filter>Header Files\application\dataFiles</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\dataFiles\customFile.h">
-      <Filter>Header Files\application\dataFiles</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\dataFiles\customXMLFile.h">
-      <Filter>Header Files\application\dataFiles</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\dataFiles\genericFile.h">
-      <Filter>Header Files\application\dataFiles</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\dataFiles\baumullerFile.h">
-      <Filter>Header Files\application\dataFiles</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\dataFiles\kollmorgenFile.h">
-      <Filter>Header Files\application\dataFiles</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\utilities\signals\filter.h">
-      <Filter>Header Files\utilities\signals</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\textInputDialog.h">
-      <Filter>Header Files\application</Filter>
-    </ClInclude>
-    <ClInclude Include="../src\application\createSignalDialog.h">
-      <Filter>Header Files\application</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\utilities\arrayStringCompare.h">
-      <Filter>Header Files\utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\renderer\primitives\legend.h">
-      <Filter>Header Files\renderer\primitives</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\renderer\line.h">
-      <Filter>Header Files\renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\renderer\primitives\textRendering.h">
-      <Filter>Header Files\renderer\primitives</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\renderer\text.h">
-      <Filter>Header Files\renderer</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="../src\renderer\primitives\axis.cpp">
-      <Filter>Source Files\renderer\primitives</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\renderer\primitives\primitive.cpp">
-      <Filter>Source Files\renderer\primitives</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\signals\derivative.cpp">
-      <Filter>Source Files\utilities\signals</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\signals\fft.cpp">
-      <Filter>Source Files\utilities\signals</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\signals\integral.cpp">
-      <Filter>Source Files\utilities\signals</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\signals\rms.cpp">
-      <Filter>Source Files\utilities\signals</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\dataset2D.cpp">
-      <Filter>Source Files\utilities</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\rangeLimitsDialog.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\dropTarget.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\mainFrame.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\plotObject.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\plotterApp.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\renderer\renderWindow.cpp">
-      <Filter>Source Files\renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\renderer\color.cpp">
-      <Filter>Source Files\renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\renderer\plotRenderer.cpp">
-      <Filter>Source Files\renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\renderer\primitives\zoomBox.cpp">
-      <Filter>Source Files\renderer\primitives</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\renderer\primitives\plotCursor.cpp">
-      <Filter>Source Files\renderer\primitives</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\renderer\primitives\plotCurve.cpp">
-      <Filter>Source Files\renderer\primitives</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\math\vector.cpp">
-      <Filter>Source Files\utilities\math</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\math\complex.cpp">
-      <Filter>Source Files\utilities\math</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\math\expressionTree.cpp">
-      <Filter>Source Files\utilities\math</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\math\matrix.cpp">
-      <Filter>Source Files\utilities\math</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\math\plotMath.cpp">
-      <Filter>Source Files\utilities\math</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\signals\curveFit.cpp">
-      <Filter>Source Files\utilities\signals</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\fontFinder.cpp">
-      <Filter>Source Files\utilities</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\filterDialog.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\multiChoiceDialog.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\fftDialog.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\frfDialog.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\dataFiles\dataFile.cpp">
-      <Filter>Source Files\application\dataFiles</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\dataFiles\customFileFormat.cpp">
-      <Filter>Source Files\application\dataFiles</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\dataFiles\customFile.cpp">
-      <Filter>Source Files\application\dataFiles</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\dataFiles\customXMLFile.cpp">
-      <Filter>Source Files\application\dataFiles</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\dataFiles\genericFile.cpp">
-      <Filter>Source Files\application\dataFiles</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\dataFiles\baumullerFile.cpp">
-      <Filter>Source Files\application\dataFiles</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\dataFiles\kollmorgenFile.cpp">
-      <Filter>Source Files\application\dataFiles</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\utilities\signals\filter.cpp">
-      <Filter>Source Files\utilities\signals</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\textInputDialog.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="../src\application\createSignalDialog.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\utilities\arrayStringCompare.cpp">
-      <Filter>Source Files\utilities</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\renderer\primitives\legend.cpp">
-      <Filter>Source Files\renderer\primitives</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\renderer\line.cpp">
-      <Filter>Source Files\renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\application\gitHash.cpp">
-      <Filter>Source Files\application</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\renderer\primitives\textRendering.cpp">
-      <Filter>Source Files\renderer\primitives</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\renderer\text.cpp">
-      <Filter>Source Files\renderer</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="../res\DataPlotter.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\src\gitHash.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\mainFrame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\plotterApp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\src\mainFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\plotterApp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
